Fixed benefit items spacing

--- a/website-guts/assets/css/pages/pricing.scss
+++ b/website-guts/assets/css/pages/pricing.scss
@@ -104,6 +104,7 @@ body.pricing {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
+      padding-bottom: 70px;
     }
     .benefit-item {
       text-align: center;
